<resources>
    <string name="app_name">Vanner</string>
    <string name="TituloVanner">Vanner</string>
    <string name="SubTituloInicio">Inicio de Sesión</string>
    <string name="hintEmail">Ingresa tu Email</string>
    <string name="hintContraseña">Ingresa tu Contraseña</string>
    <string name="txtOlvidoPass">Olvidaste tu contraseña?</string>
    <string name="btnInicioSesion">Iniciar Sesión</string>
    <string name="txtSinCuenta">¿No tienes cuenta?</string>
    <string name="company_image_description">Descripción de la imagen de la empresa</string>

    <string name="txtRecuperar">Recuperar</string>
    <string name="txtRegresar">Regresar</string>
    <string name="txtTituloRecuperar">Recuperacion de cuenta</string>


    <string-array name="cargos_array">
        <item>Usuario</item>
        <item>Empresa</item>
    </string-array>
    <string-array name="generos_array">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <string name="DescripcionFacebook">Btn para direccionar a facebook</string>
    <string name="DescripcionCorreo">Btn para direccionar a gmail</string>
    <string name="DescripcionSocial">Btn para direccionar a instagram</string>

    <string name="DescripcionImgLogo">IMG logo vanner</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_empresa">EmpresaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Listar Usuario</string>
    <string name="menu_gallery">Modificar Usuario</string>
    <string name="menu_slideshow">Eliminar Usuario</string>
    <string name="title_activity_control_empresa">ControlEmpresa</string>
    <string name="VistaAInicio" />
</resources>