<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_inicio"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/DescripcionImgLogo"
            android:src="@mipmap/vannerlogo"
            android:layout_marginLeft="10dp"/>


        <EditText
            android:id="@+id/ETUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/radius_button"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="20sp"
            android:autofillHints="username"
            android:layout_marginBottom="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/ETPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/radius_button"
                android:hint="@string/hintContraseña"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="20sp"
                android:autofillHints="password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textVolvidoPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/txtOlvidoPass"
            android:textColor="#ffffff"
            app:layout_constraintTop_toBottomOf="@id/ETPass" />

        <Button
            android:id="@+id/buttonInicioSesion"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="300dp"
            android:elevation="15dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/btnInicioSesion"
            android:textColor="#ffffff"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textVolvidoPass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSinCuenta"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/buttonRegistro"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:text="@string/btnRegistrar"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonInicioSesion" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@android:color/transparent"
                android:background="@drawable/redondeo_btnredes"
                android:src="@mipmap/facebook"
                android:contentDescription="@string/DescripcionFacebook"
                android:scaleType="fitCenter"/>
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:backgroundTint="@android:color/transparent"
                android:background="@drawable/redondeo_btnredes"
                android:src="@mipmap/gmail"
                android:contentDescription="@string/DescripcionCorreo"
                android:scaleType="fitCenter"/>
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@android:color/transparent"
                android:background="@drawable/redondeo_btnredes"
                android:src="@mipmap/social"
                android:contentDescription="@string/DescripcionSocial"
                android:scaleType="fitCenter"/>



        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
